--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/AccountReconciliation.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/AccountReconciliation.yaml
@@ -6,7 +6,7 @@ info:
     Account Reconciliation (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/AccountReconciliation/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/AccountReconciliation/12.0.1'
 paths:
   '/AccountReconciliationProcedure/{accountreconciliationprocedureid}/Control':
       put:
@@ -5602,7 +5602,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Account Reconciliation Procedure Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -5650,7 +5653,13 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) - Reference to the product or service that is related to Account
+          Reconciliation Procedure Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
@@ -5726,8 +5735,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - Reference to the Financial Transaction Arrangement that is related
+          to Account Reconciliation Procedure Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -5788,7 +5799,13 @@ components:
               description: '(DDD Entity) - Type of exposure related to this obligation. '
     Agreement:
         type: object
-        description: '(DDD Entity) - Contractual details related to an agreement between parties. '
+        description: >-
+          (DDD Entity) - Reference to the Customer Agreement that is related to Account
+          Reconciliation Procedure Agreement_x000D_
+
+          |Agreement
+          (https://www.iso20022.org/standardsrepository/type/Agreement)|Standard|ISO20022
+          BM ()
         properties:
           DateSigned:
               type: string
@@ -5826,10 +5843,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the Account for which a reconciliation procedure is
+          performed. Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -6015,9 +6032,7 @@ components:
                 portfolios. 
     Document:
         type: object
-        description: >-
-          (DDD Entity) - General information that unambiguously identifies a document, such
-          as identification number and issue date time. 
+        description: "(DDD Entity) - Reference to the Document submitted in a reconciliation process. Document\__x000D_\n|Document (https://www.iso20022.org/standardsrepository/type/Document)|Standard|ISO20022 BM ()"
         properties:
           IssueDate:
               type: string
@@ -6136,8 +6151,10 @@ components:
     ReconciliationTransaction:
         type: object
         description: >-
-          (DDD Entity) - Totals performed during the reconciliation period, for a certain
-          type of transaction. 
+          (DDD Entity) - Reference to the arrangement committed to perform the
+          reconciliation ReconciliationTransaction|ReconciliationTransaction
+          (https://www.iso20022.org/standardsrepository/type/ReconciliationTransaction)|Standard|ISO20022
+          BM ()
         properties:
           ReconciliationIdentification:
               type: string
@@ -6180,8 +6197,10 @@ components:
     System:
         type: object
         description: >-
-          (DDD Entity) - Set of integrated applications that provides centralised services
-          such as clearing, netting, reconciliation, trading and/or settlement. 
+          (DDD Entity) - Reference to the System which provides the reconciliation process.
+          System|System
+          (https://www.iso20022.org/standardsrepository/type/System)|Standard|ISO20022
+          BM ()
         properties:
           SystemIdentification:
               type: string
