--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ArchiveServices.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ArchiveServices.yaml
@@ -6,7 +6,7 @@ info:
     Archive Services (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/ArchiveServices/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ArchiveServices/12.0.1'
 paths:
   '/ArchiveOperatingSession/{archiveoperatingsessionid}/Control':
       put:
@@ -3630,7 +3630,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Archive Operating Session Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -3678,9 +3681,7 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Document:
         type: object
-        description: >-
-          (DDD Entity) - General information that unambiguously identifies a document, such
-          as identification number and issue date time. 
+        description: "(DDD Entity) - Reference to the document that is archived and retrieved by Archive Service Document\__x000D_\n|Document (https://www.iso20022.org/standardsrepository/type/Document)|Standard|ISO20022 BM ()"
         properties:
           IssueDate:
               type: string
