--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/BankDrafts.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/BankDrafts.yaml
@@ -6,7 +6,7 @@ info:
     Bank Drafts (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/BankDrafts/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/BankDrafts/12.0.1'
 paths:
   '/BearerDocumentTransaction/{bearerdocumenttransactionid}/Control':
       put:
@@ -4042,9 +4042,7 @@ components:
         description: Status Attributes
     Document:
         type: object
-        description: >-
-          (DDD Entity) - General information that unambiguously identifies a document, such
-          as identification number and issue date time. 
+        description: "(DDD Entity) -  Document\__x000D_\n|Document (https://www.iso20022.org/standardsrepository/type/Document)|Standard|ISO20022 BM ()"
         properties:
           IssueDate:
               type: string
@@ -4163,9 +4161,9 @@ components:
     PaymentInstruction:
         type: object
         description: >-
-          (DDD Entity) - Instruction to pay an amount of money to an ultimate beneficiary,
-          on behalf of an originator. This instruction may have to be forwarded
-          several times to complete the settlement chain. 
+          (DDD Entity) -  PaymentInstruction|PaymentInstruction
+          (https://www.iso20022.org/standardsrepository/type/PaymentInstruction)|Standard|ISO20022
+          BM ()
         properties:
           ProcessingValidityTime:
               type: string
