--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/BankGuarantee.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/BankGuarantee.yaml
@@ -6,7 +6,7 @@ info:
     Bank Guarantee (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/BankGuarantee/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/BankGuarantee/12.0.1'
 paths:
   '/BankGuaranteeTransaction/{bankguaranteetransactionid}/Control':
       put:
@@ -6152,9 +6152,7 @@ components:
         description: Status Attributes
     Document:
         type: object
-        description: >-
-          (DDD Entity) - General information that unambiguously identifies a document, such
-          as identification number and issue date time. 
+        description: "(DDD Entity) -  Document\__x000D_\n|Document (https://www.iso20022.org/standardsrepository/type/Document)|Standard|ISO20022 BM ()"
         properties:
           IssueDate:
               type: string
