--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/BrokeredProduct.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/BrokeredProduct.yaml
@@ -6,7 +6,7 @@ info:
     Brokered Product (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/BrokeredProduct/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/BrokeredProduct/12.0.1'
 paths:
   '/BrokeredProductFacility/{brokeredproductfacilityid}/Control':
       put:
@@ -1587,9 +1587,9 @@ components:
         description: Status Attributes
     GenericIdentification:
         type: object
-        description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+        description: |-
+          (DDD Entity) - An unique reference to an item or an occurrence of <CR>
+           GenericIdentification|GenericIdentification (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022 BM ()
         properties:
           Identification:
               type: string
