--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CardeCommerceGateway.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CardeCommerceGateway.yaml
@@ -6,7 +6,7 @@ info:
     Card eCommerce Gateway (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CardeCommerceGateway/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CardeCommerceGateway/12.0.1'
 paths:
   '/CardTransaction/Initiate':
       post:
@@ -1641,7 +1641,12 @@ components:
         description: Status Attributes
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) -  Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
