--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ContractorandSupplierAgreement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ContractorandSupplierAgreement.yaml
@@ -6,8 +6,7 @@ info:
     Contractor and Supplier Agreement (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/ContractorandSupplierAgreement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ContractorandSupplierAgreement/12.0.1'
 paths:
   '/SupplierAgreement/{supplieragreementid}/Control':
       put:
@@ -6777,7 +6776,13 @@ components:
         description: Status Attributes
     Agreement:
         type: object
-        description: '(DDD Entity) - Contractual details related to an agreement between parties. '
+        description: >-
+          (DDD Entity) - Reference to the agreement that is related to Supplier Agreement
+          Agreement_x000D_
+
+          |Agreement
+          (https://www.iso20022.org/standardsrepository/type/Agreement)|Standard|ISO20022
+          BM ()
         properties:
           DateSigned:
               type: string
@@ -6815,8 +6820,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - Right to do something under the terms of Supplier Agreement
+          Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -6878,8 +6885,10 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) - Reference to the regulation which is defined in Supplier Agreement
+          GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -6904,8 +6913,10 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - Reference to the jurisdiction that is assigned to Supplier
+          Agreement in case of legal dispute. Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -6950,10 +6961,14 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the account which is linked to Supplier Agreement
+
+
+          A characteristic of agreement which refers to its involved account to
+          specify the account that will be used to register for the transactions
+          in position keeping management. Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -7139,7 +7154,18 @@ components:
                 portfolios. 
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) - Reference to the product which is linked to Supplier Agreement
+
+
+          Comment: 
+
+          A characteristic of agreement which refers to its related products
+          that are sold by agreement. Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
