--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CorporateAction.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CorporateAction.yaml
@@ -6,7 +6,7 @@ info:
     Corporate Action (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CorporateAction/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CorporateAction/12.0.1'
 paths:
   '/CorporateActionProcedure/{corporateactionprocedureid}/Control':
       put:
@@ -9229,7 +9229,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Corporate Action Procedure Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -9277,7 +9280,13 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) - Reference to the product or service that is related to Corporate
+          Action Procedure Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
@@ -9353,8 +9362,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - Reference to the Financial Transaction Arrangement that is related
+          to Corporate Action Procedure Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -9415,7 +9426,13 @@ components:
               description: '(DDD Entity) - Type of exposure related to this obligation. '
     Agreement:
         type: object
-        description: '(DDD Entity) - Contractual details related to an agreement between parties. '
+        description: >-
+          (DDD Entity) - Reference to the Customer Agreement that is related to Corporate
+          Action Procedure Agreement_x000D_
+
+          |Agreement
+          (https://www.iso20022.org/standardsrepository/type/Agreement)|Standard|ISO20022
+          BM ()
         properties:
           DateSigned:
               type: string
@@ -9453,9 +9470,9 @@ components:
     CorporateActionEvent:
         type: object
         description: >-
-          (DDD Entity) - An event determined by a corporation's board of directors, that
-          changes the existing corporate capital structure or financial
-          condition. 
+          (DDD Entity) -  CorporateActionEvent|CorporateActionEvent
+          (https://www.iso20022.org/standardsrepository/type/CorporateActionEvent)|Standard|ISO20022
+          BM ()
         properties:
           Type:
               type: string
