--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CorporateFinance.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CorporateFinance.yaml
@@ -6,7 +6,7 @@ info:
     Corporate Finance (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CorporateFinance/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CorporateFinance/12.0.1'
 paths:
   '/CorporateFinanceServicesAdvice/{corporatefinanceservicesadviceid}/Control':
       put:
@@ -4597,8 +4597,9 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) -  Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
