--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CorrespondentBankOperations.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CorrespondentBankOperations.yaml
@@ -6,7 +6,7 @@ info:
     Correspondent Bank Operations (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CorrespondentBankOperations/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CorrespondentBankOperations/12.0.1'
 paths:
   '/CorrespondentBankOperatingSession/Initiate':
       post:
@@ -5347,10 +5347,10 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to associated nostro account (our money at your bank)
+          Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -5536,7 +5536,10 @@ components:
                 portfolios. 
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) -  Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -5628,12 +5631,9 @@ components:
     Clearing:
         type: object
         description: >-
-          (DDD Entity) - Mechanism allowing financial institutions that are members of a
-          clearing house to pay and to receive the amounts linked to the
-          transactions that they have executed on the market. The addition of
-          all the positions per product results in one net position (due or to
-          receive) with the clearing house or the central clearing
-          counterparty. 
+          (DDD Entity) -  Clearing|Clearing
+          (https://www.iso20022.org/standardsrepository/type/Clearing)|Standard|ISO20022
+          BM ()
         properties:
           ClearingThresholdIndicator:
               type: string
@@ -5670,8 +5670,9 @@ components:
     CashSettlement:
         type: object
         description: >-
-          (DDD Entity) - Instruction between two financial institutions stipulating the
-          cash transfer characteristics between the two parties. 
+          (DDD Entity) -  CashSettlement|CashSettlement
+          (https://www.iso20022.org/standardsrepository/type/CashSettlement)|Standard|ISO20022
+          BM ()
         properties:
           InterbankSettlementAmount:
               type: string
