--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CreditCard.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CreditCard.yaml
@@ -6,7 +6,7 @@ info:
     Credit Card (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CreditCard/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CreditCard/12.0.1'
 paths:
   '/CreditCardFacility/Initiate':
       post:
@@ -13404,7 +13404,11 @@ components:
         description: Status Attributes
     CardPayment:
         type: object
-        description: '(DDD Entity) - Payment through an electronic money product. '
+        description: >-
+          (DDD Entity) - The selected option value for this instance
+          CardPayment|CardPayment
+          (https://www.iso20022.org/standardsrepository/type/CardPayment)|Standard|ISO20022
+          BM ()
         properties:
           PaymentCard:
               type: string
@@ -13479,7 +13483,12 @@ components:
           ISO 4217 Maintenance Agency, and consist of three contiguous letters.
     AccountRestriction:
         type: object
-        description: '(DDD Entity) - Restriction on capability or operations allowed. '
+        description: >-
+          (DDD Entity) - The setting for the restriction option AccountRestriction_x000D_
+
+          |AccountRestriction
+          (https://www.iso20022.org/standardsrepository/type/AccountRestriction)|Standard|ISO20022
+          BM  ()
         properties:
           Account:
               type: string
@@ -13495,7 +13504,13 @@ components:
               description: '(DDD Entity) - Period during which the restriction is effective. '
     AccountPartyRole:
         type: object
-        description: '(DDD Entity) - Role played by a party in the context of account operations. '
+        description: >-
+          (DDD Entity) - Any involved parties and the nature of their associations to the
+          card account Account Party Role_x000D_
+
+          |Account Party Role
+          (https://www.iso20022.org/standardsrepository/type/AccountPartyRole)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -13503,7 +13518,10 @@ components:
               description: '(DDD Entity) - Identifies the account for which a party plays a role. '
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) - Reference to the associated party Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
@@ -13563,10 +13581,9 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Details of the linked account Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -13753,8 +13770,10 @@ components:
     Limit:
         type: object
         description: >-
-          (DDD Entity) - Value used for risk containment in a system or towards
-          counterparts. The limit may be a current limit or a default limit. 
+          (DDD Entity) - The position definition, associated limit settings and rules
+          Limit|Limit
+          (https://www.iso20022.org/standardsrepository/type/Limit)|Standard|ISO20022
+          (https://www.iso20022.org/)
         properties:
           Type:
               type: string
@@ -13822,8 +13841,10 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) - The reporting period covered by the statement
+          DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -14192,8 +14213,10 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Unique and unambiguous identification of a Product Marketing
+          State. GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -14320,7 +14343,10 @@ components:
                 scope of the regulatory requirements are registered. 
     FrequencyCode:
         type: object
-        description: (DDD Entity) - Specifies the regularity of an event.
+        description: >-
+          (DDD Entity) -  FrequencyCode|FrequencyCode
+          (https://www.iso20022.org/standardsrepository/type/FrequencyCode)|Standard|ISO20022
+          ()
         properties:
           Annual:
               type: string
@@ -14436,8 +14462,9 @@ components:
     Tax:
         type: object
         description: >-
-          (DDD Entity) - Amount of money due to the government or tax authority, according
-          to various pre-defined parameters such as thresholds or income. 
+          (DDD Entity) -  Tax|Tax
+          (https://www.iso20022.org/standardsrepository/type/Tax)|Standard|ISO20022
+          BM ()
         properties:
           ExemptionReason:
               type: string
@@ -14625,8 +14652,9 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) -  Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -14730,10 +14758,9 @@ components:
     Interest:
         type: object
         description: >-
-          (DDD Entity) - Consideration, such as amount of money,  paid or received in
-          exchange for an asset that has been invested, loaned or borrowed for a
-          certain period. The interest is expressed as a fixed amount or
-          percentage of the amount upon which the interest is applied. 
+          (DDD Entity) -  Interest|Interest
+          (https://www.iso20022.org/standardsrepository/type/Interest)|Standard|ISO20022
+          BM ()
         properties:
           AccruedInterestAmount:
               type: string
@@ -14841,8 +14868,9 @@ components:
     Invoice:
         type: object
         description: >-
-          (DDD Entity) - General information about an invoice, such as number, issue date
-          date and monetary amounts. 
+          (DDD Entity) -  Invoice|Invoice
+          (https://www.iso20022.org/standardsrepository/type/Invoice)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitNoteAmount:
               type: string
@@ -14962,7 +14990,10 @@ components:
                 debtor activation has to be delivered. 
     InvoicePartyRole:
         type: object
-        description: '(DDD Entity) - Role played by a party in the context of an invoice. '
+        description: >-
+          (DDD Entity) -  InvoicePartyRole|InvoicePartyRole
+          (https://www.iso20022.org/standardsrepository/type/InvoicePartyRole)|Standard|ISO20022
+          BM ()
         properties:
           Invoice:
               type: string
@@ -14970,7 +15001,10 @@ components:
               description: '(DDD Entity) - Identifies the invoice for which a party plays a role. '
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) -  Location/Address|Location/Address
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM ()
         properties:
           NativePerson:
               type: string
@@ -15064,8 +15098,9 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) -  Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -15127,8 +15162,9 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) -  GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -15153,8 +15189,9 @@ components:
     AccountIdentification:
         type: object
         description: >-
-          (DDD Entity) - Unique identifier of an account, as assigned by the account
-          servicer. 
+          (DDD Entity) -  AccountIdentification |AccountIdentification 
+          (https://www.iso20022.org/standardsrepository/type/AccountIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
