--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CreditCardPositionKeeping.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CreditCardPositionKeeping.yaml
@@ -6,7 +6,7 @@ info:
     Credit Card Position Keeping (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CreditCardPositionKeeping/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CreditCardPositionKeeping/12.0.1'
 paths:
   '/CreditCardPositionLog/{creditcardpositionlogid}/Capture':
       put:
@@ -1937,7 +1937,10 @@ components:
         description: Status Attributes
     Position:
         type: object
-        description: '(DDD Entity) - Specifies the status of trades and their value inside a system. '
+        description: >-
+          (DDD Entity) - The position of Credit Card Position Log Position |Position 
+          (https://www.iso20022.org/standardsrepository/type/Position)|Standard|ISO20022
+          BM ()
         properties:
           NetQuantity:
               type: string
@@ -1972,8 +1975,10 @@ components:
     Limit:
         type: object
         description: >-
-          (DDD Entity) - Value used for risk containment in a system or towards
-          counterparts. The limit may be a current limit or a default limit. 
+          (DDD Entity) - Reference to the time limitation related to the position of Credit
+          Card Position Log Limit|Limit
+          (https://www.iso20022.org/standardsrepository/type/Limit)|Standard|ISO20022
+          (https://www.iso20022.org/)
         properties:
           Type:
               type: string
