--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CreditRiskOperations.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CreditRiskOperations.yaml
@@ -6,7 +6,7 @@ info:
     Credit Risk Operations (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CreditRiskOperations/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CreditRiskOperations/12.0.1'
 paths:
   '/TradingCreditPositionMeasurement/{tradingcreditpositionmeasurementid}/Control':
       put:
@@ -1989,7 +1989,10 @@ components:
         description: Status Attributes
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Trading Credit Position Measurement Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -2037,7 +2040,13 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) - Reference to the product which is the subject matter of Trading
+          Credit Position Measurement Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
@@ -2113,8 +2122,10 @@ components:
     Limit:
         type: object
         description: >-
-          (DDD Entity) - Value used for risk containment in a system or towards
-          counterparts. The limit may be a current limit or a default limit. 
+          (DDD Entity) - Reference to Tresholds and Limits for monitoring Trading Credit
+          Position Measurement Limit|Limit
+          (https://www.iso20022.org/standardsrepository/type/Limit)|Standard|ISO20022
+          (https://www.iso20022.org/)
         properties:
           Type:
               type: string
@@ -2182,8 +2193,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - Reference to Notification Arrangements for monitoring Trading
+          Credit Position Measurement Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
