--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CurrentAccount.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CurrentAccount.yaml
@@ -6,7 +6,7 @@ info:
     Current Account (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CurrentAccount/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CurrentAccount/12.0.1'
 paths:
   '/CurrentAccountFacility/Initiate':
       post:
@@ -17665,8 +17665,10 @@ components:
     AccountIdentification:
         type: object
         description: >-
-          (DDD Entity) - Unique identifier of an account, as assigned by the account
-          servicer. 
+          (DDD Entity) - The associated account number in any suitable format (e.g. IBAN)
+          AccountIdentification |AccountIdentification 
+          (https://www.iso20022.org/standardsrepository/type/AccountIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -17738,8 +17740,11 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - Identifier within the parent organisation for the product. Must be
+          unique in the organisation.
+          GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
@@ -17866,7 +17871,12 @@ components:
                 scope of the regulatory requirements are registered. 
     AccountRestriction:
         type: object
-        description: '(DDD Entity) - Restriction on capability or operations allowed. '
+        description: >-
+          (DDD Entity) - The setting for the restriction option AccountRestriction_x000D_
+
+          |AccountRestriction
+          (https://www.iso20022.org/standardsrepository/type/AccountRestriction)|Standard|ISO20022
+          BM  ()
         properties:
           Account:
               type: string
@@ -17882,7 +17892,13 @@ components:
               description: '(DDD Entity) - Period during which the restriction is effective. '
     AccountPartyRole:
         type: object
-        description: '(DDD Entity) - Role played by a party in the context of account operations. '
+        description: >-
+          (DDD Entity) - Definition of the associations to the account Account Party
+          Role_x000D_
+
+          |Account Party Role
+          (https://www.iso20022.org/standardsrepository/type/AccountPartyRole)|Standard|ISO20022
+          BM ()
         properties:
           Account:
               type: string
@@ -17890,7 +17906,10 @@ components:
               description: '(DDD Entity) - Identifies the account for which a party plays a role. '
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) - Reference to the associated party Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
@@ -17950,10 +17969,9 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Details of the linked account Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -18140,8 +18158,10 @@ components:
     Limit:
         type: object
         description: >-
-          (DDD Entity) - Value used for risk containment in a system or towards
-          counterparts. The limit may be a current limit or a default limit. 
+          (DDD Entity) - The position definition, associated limit settings and rules
+          Limit|Limit
+          (https://www.iso20022.org/standardsrepository/type/Limit)|Standard|ISO20022
+          (https://www.iso20022.org/)
         properties:
           Type:
               type: string
@@ -18234,8 +18254,9 @@ components:
     Balance:
         type: object
         description: >-
-          (DDD Entity) - Numerical representation of the net increases and decreases in an
-          account at a specific point in time. 
+          (DDD Entity) -  Balance|Balance
+          (https://www.iso20022.org/standardsrepository/type/Balance)|Standard|ISO20022
+          BM ()
         properties:
           Type:
               type: string
@@ -18300,8 +18321,9 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) -  DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -18675,8 +18697,9 @@ components:
     Tax:
         type: object
         description: >-
-          (DDD Entity) - Amount of money due to the government or tax authority, according
-          to various pre-defined parameters such as thresholds or income. 
+          (DDD Entity) -  Tax|Tax
+          (https://www.iso20022.org/standardsrepository/type/Tax)|Standard|ISO20022
+          BM ()
         properties:
           ExemptionReason:
               type: string
@@ -18839,10 +18862,9 @@ components:
     Interest:
         type: object
         description: >-
-          (DDD Entity) - Consideration, such as amount of money,  paid or received in
-          exchange for an asset that has been invested, loaned or borrowed for a
-          certain period. The interest is expressed as a fixed amount or
-          percentage of the amount upon which the interest is applied. 
+          (DDD Entity) -  Interest|Interest
+          (https://www.iso20022.org/standardsrepository/type/Interest)|Standard|ISO20022
+          BM ()
         properties:
           AccruedInterestAmount:
               type: string
@@ -18950,8 +18972,9 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) -  Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -19060,7 +19083,10 @@ components:
           example, 0.7 is 7/10 of a percent, and 7.0 is 7%.
     FrequencyCode:
         type: object
-        description: (DDD Entity) - Specifies the regularity of an event.
+        description: >-
+          (DDD Entity) -  FrequencyCode|FrequencyCode
+          (https://www.iso20022.org/standardsrepository/type/FrequencyCode)|Standard|ISO20022
+          ()
         properties:
           Annual:
               type: string
@@ -19160,7 +19186,10 @@ components:
               description: (DDD Entity) - Two times a week
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) -  Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -19209,8 +19238,9 @@ components:
     Mandate:
         type: object
         description: >-
-          (DDD Entity) - Authorisation given by an issuing party to a holder party to act
-          on the issuer's behalf. 
+          (DDD Entity) -  Mandate|Mandate
+          (https://www.iso20022.org/standardsrepository/type/Mandate)|Standard|ISO20022
+          BM ()
         properties:
           SignatureConditions:
               type: string
@@ -19282,9 +19312,7 @@ components:
                 party. 
     CashDeposit:
         type: object
-        description: >-
-          (DDD Entity) - Amount of money representing a value paid by a debtor to an agent
-          bank. 
+        description: (DDD Entity) -  CashDeposit| ()|Standard|ISO20022 BM ()
         properties:
           NoteDenomination:
               type: string
@@ -19321,9 +19349,9 @@ components:
     PaymentExecution:
         type: object
         description: >-
-          (DDD Entity) - Process required for executing an end to end payment. It consists
-          of a payment initiation which may be followed by a series of
-          instructions. 
+          (DDD Entity) -  PaymentExecution|PaymentExecution
+          (https://www.iso20022.org/standardsrepository/type/PaymentExecution)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
@@ -19383,8 +19411,9 @@ components:
     PaymentProcessing:
         type: object
         description: >-
-          (DDD Entity) - Specifies how a payment must be processed, for instance through
-          which specific clearing channel. 
+          (DDD Entity) -  PaymentProcessing|PaymentProcessing
+          (https://www.iso20022.org/standardsrepository/type/PaymentProcessing)|Standard|ISO20022
+          BM ()
         properties:
           Priority:
               type: string
@@ -19453,7 +19482,10 @@ components:
                 transaction. 
     PaymentTerms:
         type: object
-        description: '(DDD Entity) - Specifies the payment terms of the obligation. '
+        description: >-
+          (DDD Entity) -  PaymentTerms|PaymentTerms
+          (https://www.iso20022.org/standardsrepository/type/PaymentTerms)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -19494,8 +19526,9 @@ components:
     DirectDebitMandate:
         type: object
         description: >-
-          (DDD Entity) - Authorisation in favour of the creditor given by the debtor to
-          debit its own account. 
+          (DDD Entity) -  DirectDebitMandate|DirectDebitMandate
+          (https://www.iso20022.org/standardsrepository/type/DirectDebitMandate)|Standard|ISO20022
+          BM ()
         properties:
           RelatedDirectDebit:
               type: string
@@ -19549,7 +19582,10 @@ components:
                 moment within a specified period type. 
     Location:
         type: object
-        description: '(DDD Entity) - Specifies a place. '
+        description: >-
+          (DDD Entity) -  Location|Location
+          (https://www.iso20022.org/standardsrepository/type/Location)|Standard|ISO20022
+          BM  ()
         properties:
           NativePerson:
               type: string
@@ -19635,8 +19671,9 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) -  Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -19698,8 +19735,9 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) -  GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -19728,8 +19766,9 @@ components:
     Entry:
         type: object
         description: >-
-          (DDD Entity) - Posting to an account that results in an increase or decrease to a
-          balance. 
+          (DDD Entity) -  Entry|Entry
+          (https://www.iso20022.org/standardsrepository/type/Entry)|Standard|ISO20022
+          BM ()
         properties:
           CreditDebitIndicator:
               type: string
