--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerAccessEntitlement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerAccessEntitlement.yaml
@@ -6,7 +6,7 @@ info:
     Customer Access Entitlement (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CustomerAccessEntitlement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CustomerAccessEntitlement/12.0.1'
 paths:
   '/CustomerAccessProfileAgreement/Evaluate':
       post:
@@ -1532,8 +1532,10 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) - The duration that the agreement is in force
+          DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
