--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerOffer.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerOffer.yaml
@@ -6,7 +6,7 @@ info:
     Customer Offer (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CustomerOffer/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CustomerOffer/12.0.1'
 paths:
   '/CustomerOfferProcedure/Initiate':
       post:
@@ -4976,7 +4976,10 @@ components:
         description: Status Attributes
     Party:
         type: object
-        description: '(DDD Entity) - Entity involved in an activity. '
+        description: >-
+          (DDD Entity) - Reference to the legal entity (typically the customer) Party|Party
+          (https://www.iso20022.org/standardsrepository/type/Party)|Standard|ISO20022BM
+          ()
         properties:
           ContactPoint:
               type: string
@@ -5036,8 +5039,9 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) -  Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -5099,8 +5103,9 @@ components:
     Adjustment:
         type: object
         description: >-
-          (DDD Entity) - Modification on the value of goods and / or services. For example:
-          rebate, discount. 
+          (DDD Entity) -  Adjustment|Adjustment
+          (https://www.iso20022.org/standardsrepository/type/Adjustment)|Standard|ISO20022
+          BM ()
         properties:
           Amount:
               type: string
@@ -5204,8 +5209,9 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) -  GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -5229,9 +5235,7 @@ components:
               description: '(DDD Entity) - Agency that publishes the governance rules. '
     Document:
         type: object
-        description: >-
-          (DDD Entity) - General information that unambiguously identifies a document, such
-          as identification number and issue date time. 
+        description: "(DDD Entity) -  Document\__x000D_\n|Document (https://www.iso20022.org/standardsrepository/type/Document)|Standard|ISO20022 BM ()"
         properties:
           IssueDate:
               type: string
@@ -5350,8 +5354,9 @@ components:
     Collateral:
         type: object
         description: >-
-          (DDD Entity) - Assets pledged by a debtor to secure a loan or an exposure and
-          subject to seizure in the event of default. 
+          (DDD Entity) -  Collateral|Collateral
+          (https://www.iso20022.org/standardsrepository/type/Collateral)|Standard|ISO20022
+          BM ()
         properties:
           CollateralAmount:
               type: string
@@ -5465,7 +5470,10 @@ components:
               description: '(DDD Entity) - Collateral  transaction type. '
     Asset:
         type: object
-        description: '(DDD Entity) - Tangible items of value to a business. '
+        description: >-
+          (DDD Entity) -  Asset|Asset
+          (https://www.iso20022.org/standardsrepository/type/Asset)|Standard|ISO20022
+          BM ()
         properties:
           ExpiryDate:
               type: string
