--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerPosition.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerPosition.yaml
@@ -6,7 +6,7 @@ info:
     Customer Position (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CustomerPosition/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CustomerPosition/12.0.1'
 paths:
   '/CustomerPositionState/Initiate':
       post:
@@ -2619,9 +2619,9 @@ components:
         description: Status Attributes
     GenericIdentification:
         type: object
-        description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+        description: |-
+          (DDD Entity) - An unique reference to an item or an occurrence of <CR>
+           GenericIdentification|GenericIdentification (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022 BM ()
         properties:
           Identification:
               type: string
@@ -2749,8 +2749,9 @@ components:
     ReportingService:
         type: object
         description: >-
-          (DDD Entity) - Specifies the reporting parameters that are included in the
-          account contract which specifies the services linked to the account.. 
+          (DDD Entity) -  ReportingService|ReportingService
+          (https://www.iso20022.org/standardsrepository/type/ReportingService)|Standard|ISO20022
+          BM ()
         properties:
           StatementFrequency:
               type: string
@@ -2788,8 +2789,9 @@ components:
     DateTimePeriod:
         type: object
         description: >-
-          (DDD Entity) - Time span defined by a start date and time, and an end date and
-          time. 
+          (DDD Entity) -  DateTimePeriod|DateTimePeriod
+          (https://www.iso20022.org/standardsrepository/type/DateTimePeriod)|Standard|ISO20022
+          BM ()
         properties:
           FromDateTime:
               type: string
@@ -3153,7 +3155,10 @@ components:
                 provided. 
     Asset:
         type: object
-        description: '(DDD Entity) - Tangible items of value to a business. '
+        description: >-
+          (DDD Entity) -  Asset|Asset
+          (https://www.iso20022.org/standardsrepository/type/Asset)|Standard|ISO20022
+          BM ()
         properties:
           ExpiryDate:
               type: string
