--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerRelationshipManagement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerRelationshipManagement.yaml
@@ -6,8 +6,7 @@ info:
     Customer Relationship Management (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/CustomerRelationshipManagement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CustomerRelationshipManagement/12.0.1'
 paths:
   '/CustomerRelationshipManagementPlan/Create':
       post:
