--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ACHOperations.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/ACHOperations.yaml
@@ -6,7 +6,7 @@ info:
     ACH Operations (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/ACHOperations/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/ACHOperations/12.0.1'
 paths:
   '/ACHFulfillmentOperatingSession/{achfulfillmentoperatingsessionid}/Update':
       put:
