--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/BranchLocationOperations.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/BranchLocationOperations.yaml
@@ -6,7 +6,7 @@ info:
     Branch Location Operations (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/BranchLocationOperations/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/BranchLocationOperations/12.0.1'
 paths:
   '/BranchLocationAdministrativePlan/{branchlocationadministrativeplanid}/Control':
       put:
@@ -1619,8 +1619,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - The set of administrative responsibilities defined in Branch
+          Location Administrative Plan Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -1682,8 +1684,10 @@ components:
     Balance:
         type: object
         description: >-
-          (DDD Entity) - Numerical representation of the net increases and decreases in an
-          account at a specific point in time. 
+          (DDD Entity) - Balance of budget which is arranged whitin Branch Location
+          Administrative Plan Balance|Balance
+          (https://www.iso20022.org/standardsrepository/type/Balance)|Standard|ISO20022
+          BM ()
         properties:
           Type:
               type: string
