--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CardFinancialSettlement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CardFinancialSettlement.yaml
@@ -6,7 +6,7 @@ info:
     Card Financial Settlement (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CardFinancialSettlement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CardFinancialSettlement/12.0.1'
 paths:
   '/CardFinancialSettlementProcedure/Initiate':
       post:
