--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CashManagementAndAccountServices.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CashManagementAndAccountServices.yaml
@@ -6,8 +6,7 @@ info:
     Cash Management And Account Services (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/CashManagementAndAccountServices/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CashManagementAndAccountServices/12.0.1'
 paths:
   '/CashManagementAndAccountServicesFacility/Initiate':
       post:
