--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CorrespondentBankRelationshipManagement.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CorrespondentBankRelationshipManagement.yaml
@@ -6,8 +6,7 @@ info:
     Correspondent Bank Relationship Management (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/CorrespondentBankRelationshipManagement/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CorrespondentBankRelationshipManagement/12.0.1'
 paths:
   '/CorrepondentBankRelationshipManagementPlan/{correpondentbankrelationshipmanagementplanid}/Control':
       put:
@@ -3769,8 +3768,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - The set of management responsibilities defined in Correpondent
+          Bank Relationship Management Plan Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -3832,8 +3833,10 @@ components:
     Balance:
         type: object
         description: >-
-          (DDD Entity) - Numerical representation of the net increases and decreases in an
-          account at a specific point in time. 
+          (DDD Entity) - Balance of budget which is arranged whitin Correpondent Bank
+          Relationship Management Plan Balance|Balance
+          (https://www.iso20022.org/standardsrepository/type/Balance)|Standard|ISO20022
+          BM ()
         properties:
           Type:
               type: string
