--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CounterpartyAdministration.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CounterpartyAdministration.yaml
@@ -6,7 +6,7 @@ info:
     Counterparty Administration (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CounterpartyAdministration/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CounterpartyAdministration/12.0.1'
 paths:
   '/CounterpartyDirectoryEntry/{counterpartydirectoryentryid}/Control':
       put:
@@ -2973,7 +2973,10 @@ components:
         description: (DDD Entity) - Number of objects represented as an integer.
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Counterparty Directory Entry Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -3021,7 +3024,12 @@ components:
               description: '(DDD Entity) - Provides the status of a modification request. '
     Agreement:
         type: object
-        description: '(DDD Entity) - Contractual details related to an agreement between parties. '
+        description: >-
+          (DDD Entity) -  Agreement_x000D_
+
+          |Agreement
+          (https://www.iso20022.org/standardsrepository/type/Agreement)|Standard|ISO20022
+          BM ()
         properties:
           DateSigned:
               type: string
