--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerBilling.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerBilling.yaml
@@ -6,7 +6,7 @@ info:
     Customer Billing (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CustomerBilling/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CustomerBilling/12.0.1'
 paths:
   '/CustomerBillingProcedure/Initiate':
       post:
