--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerCreditRating.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerCreditRating.yaml
@@ -6,7 +6,7 @@ info:
     Customer Credit Rating (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CustomerCreditRating/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CustomerCreditRating/12.0.1'
 paths:
   '/CustomerCreditRatingState/Initiate':
       post:
