--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerProductAndServiceEligibility.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerProductAndServiceEligibility.yaml
@@ -6,8 +6,7 @@ info:
     Customer Product And Service Eligibility (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/CustomerProductAndServiceEligibility/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CustomerProductAndServiceEligibility/12.0.1'
 paths:
   '/CustomerEligibilityAssessment/Evaluate':
       post:
@@ -1466,8 +1465,11 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - Defines if and under what terms a product/service is available to
+          this customer this detail is maintained by the service domain and
+          referenced by this evaluation Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -1536,7 +1538,10 @@ components:
           October 2004" which is aligned with ISO 8601.
     Assessment:
         type: object
-        description: '(DDD Entity) - Assessment for the components of a system. '
+        description: >-
+          (DDD Entity) -  Assessment|Assessment
+          (https://www.iso20022.org/standardsrepository/type/Assessment)|Standard|ISO20022
+          BM ()
         properties:
           AssessmentType:
               type: string
