--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerProductandServiceDirectory.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerProductandServiceDirectory.yaml
@@ -6,8 +6,7 @@ info:
     Customer Product and Service Directory (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: >-
-    https://virtserver.swaggerhub.com/BIAN-3/CustomerProductandServiceDirectory/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CustomerProductandServiceDirectory/12.0.1'
 paths:
   '/CustomerProductAndServiceDirectoryEntry/{customerproductandservicedirectoryentryid}/Control':
       put:
@@ -3385,7 +3384,11 @@ components:
         description: (DDD Entity) - Number of objects represented as an integer.
     Status:
         type: object
-        description: '(DDD Entity) - The status of an instruction, advice or request. '
+        description: >-
+          (DDD Entity) - The status of Customer Products And Services Directory Entry
+          Status |Status 
+          (https://www.iso20022.org/standardsrepository/type/Status)|Standard|ISO20022
+          BM ()
         properties:
           StatusReason:
               type: string
@@ -3434,8 +3437,11 @@ components:
     GenericIdentification:
         type: object
         description: >-
-          (DDD Entity) - Information related to a non-standardised identification, such as
-          a proprietary party identification or account identification. 
+          (DDD Entity) - An unique reference to an item or an occurrence of Customer
+          Products And Services Directory Entry
+          GenericIdentification|GenericIdentification
+          (https://www.iso20022.org/standardsrepository/type/GenericIdentification)|Standard|ISO20022
+          BM ()
         properties:
           Identification:
               type: string
