--- a/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerProposition.yaml
+++ b/release12.0.0/apis-iso20022_ext-ddd/oas3/yamls/CustomerProposition.yaml
@@ -6,7 +6,7 @@ info:
     Customer Proposition (expanded with ISO200022)
   version: 12.0.1
 servers:
-  - url: https://virtserver.swaggerhub.com/BIAN-3/CustomerProposition/12.0.1
+  - url: ' https://virtserver.swaggerhub.com/BIAN-3/CustomerProposition/12.0.1'
 paths:
   '/CustomerPropositionAgreement/{customerpropositionagreementid}/Control':
       put:
@@ -5267,7 +5267,13 @@ components:
         description: Status Attributes
     Agreement:
         type: object
-        description: '(DDD Entity) - Contractual details related to an agreement between parties. '
+        description: >-
+          (DDD Entity) - Reference to the agreement that is related to Customer Proposition
+          Agreement Agreement_x000D_
+
+          |Agreement
+          (https://www.iso20022.org/standardsrepository/type/Agreement)|Standard|ISO20022
+          BM ()
         properties:
           DateSigned:
               type: string
@@ -5305,8 +5311,10 @@ components:
     Obligation:
         type: object
         description: >-
-          (DDD Entity) - Specifies the assets (quantity of securities, goods, services, and
-          cash amounts) that have to be delivered. 
+          (DDD Entity) - Right to do something under the terms of Customer Proposition
+          Agreement Obligation|Obligation
+          (https://www.iso20022.org/standardsrepository/type/Obligation)|Standard|ISO20022
+          BM ()
         properties:
           RequestedSettlementDate:
               type: string
@@ -5368,8 +5376,10 @@ components:
     GovernanceRules:
         type: object
         description: >-
-          (DDD Entity) - Rules governing an undertaking such as a guarantee or standby
-          letter of credit. 
+          (DDD Entity) - Reference to the regulation which is defined in Customer
+          Proposition Agreement GovernanceRules|GovernanceRules
+          (https://www.iso20022.org/standardsrepository/type/GovernanceRules)|Standard|ISO20022
+          BM ()
         properties:
           ModelForm:
               type: string
@@ -5394,8 +5404,11 @@ components:
     Jurisdiction:
         type: object
         description: >-
-          (DDD Entity) - Specifies the jurisdiction (country, county, state, province,
-          city). 
+          (DDD Entity) - Reference to the jurisdiction that is assigned to Customer
+          Proposition Agreement in case of legal dispute.
+          Jurisdiction|Jurisdiction
+          (https://www.iso20022.org/standardsrepository/type/Jurisdiction)|Standard|ISO20022
+          BM ()
         properties:
           GovernanceRules:
               type: string
@@ -5440,10 +5453,15 @@ components:
     Account:
         type: object
         description: >-
-          (DDD Entity) - Record of transactions in specific types of assets, maintained by
-          a servicing party on behalf of one or more owning parties. Business
-          relationship between an account servicer and one or more account
-          owners. 
+          (DDD Entity) - Reference to the account which is linked to Customer Proposition
+          Agreement
+
+
+          A characteristic of agreement which refers to its involved account to
+          specify the account that will be used to register for the transactions
+          in position keeping management. Account|Account 
+          (https://www.iso20022.org/standardsrepository/type/Account)|Standard|ISO20022
+          BM ()
         properties:
           BaseCurrency:
               type: string
@@ -5629,7 +5647,19 @@ components:
                 portfolios. 
     Product:
         type: object
-        description: '(DDD Entity) - Item that is offered for sale. Products can be services or goods. '
+        description: >-
+          (DDD Entity) - Reference to the product which is linked to Customer Proposition
+          Agreement
+
+
+          Comment: 
+
+          A characteristic of agreement which refers to its related products
+          that are sold by agreement. Product_x000D_
+
+          |Product
+          (https://www.iso20022.org/standardsrepository/type/Product)|Standard|ISO20022
+          BM ()
         properties:
           CardPayment:
               type: string
